[package]
name = "espresso"
description = "AT based driver crate for ESP8266 WiFi modules"
homepage = "https://github.com/dbrgn/espresso/"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
heapless = "0.5"
nb = "0.1"
no-std-net = "0.3"
numtoa = "0.2"
defmt = "0.2.0"

[dependencies.atat]
git = "https://github.com/fkohlgrueber/atat"
branch = "e-hal-master"

[dependencies.embedded-hal]
git = "https://github.com/rust-embedded/embedded-hal"
commit = "e8354100b19f6068dbcd74d2a646934295406fc3"


[dev-dependencies]
env_logger = "0.6"
log = "0.4"
serialport = { git = "https://gitlab.com/dbrgn/serialport-rs", branch = "embedded", features = ["embedded"], default_features = false }
# serialport = { path = "../serialport-rs", branch = "embedded", features = ["embedded"], default_features = false }
void = "1"

[[example]]
name = "linux"
